encyctng/static_src/sass/components/navigation/_header.scss
@use 'config' as *;

.header {
    $root: &;

    &__wrapper {
        @include z-index(header);
        position: relative;
        display: flex;
        justify-content: space-between;
        max-width: $site-max-width;
        margin: 0 auto 30px;
        padding-left: $grid-gutters-mobile;
        padding-right: $grid-gutters-mobile;

        @include media-query(medium) {
            padding-left: $grid-gutters-tablet;
            padding-right: $grid-gutters-tablet;
        }

        @include media-query(large) {
            justify-content: flex-start;
            margin-bottom: 50px;
            padding-left: $grid-gutters-desktop;
            padding-right: $grid-gutters-desktop;
        }
    }

    &__home-link {
        @include font-size(meta-large);
        display: inline-flex;
        flex-direction: column;
        align-items: center;
        background-color: var(--color--dark-blue);
        color: var(--color--white);
        text-decoration: none;
        padding: 13px 14px;

        @include media-query(large) {
            background-color: var(--color--blue);
            padding: 14px 17px;
        }
    }

    &__logo {
        max-width: 80px;
        height: 50px;
        margin-bottom: 5px;

        @include media-query(large) {
            max-width: 100px;
            height: 63px;
        }
    }

    &__mobile-overlay {
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        opacity: 0;
        visibility: hidden;
        background-color: var(--color--blue);
        transition: opacity $transition, visibility $transition;

        &.is-visible {
            opacity: 1;
            visibility: visible;
        }

        @include media-query(large) {
            display: none;
        }
    }

    &__menu-toggle {
        background-color: transparent;
        border: 0;
        box-shadow: none;
        padding: 10px $spacer-mini-plus;
        transition: background-color $transition;
        font-weight: $weight--bold;
        display: block;

        @include media-query(large) {
            display: none;
        }
        &.is-open {
            #{$root}__menu-toggle-icon {
                &--close {
                    display: block;
                }

                &--open {
                    display: none;
                }
            }
        }
    }

    &__menu-toggle-icon {
        width: 32px;
        height: 32px;

        &--close {
            color: var(--color--light-blue);
            display: none;
        }
    }

    .template-collections & {
        background-color: var(--color--orange);

        #{$root}__wrapper {
            margin-bottom: 0;
        }
    }
}

